@@ -51,7 +51,7 @@ class pts_test_result_buffer
 	}
 	public function add_buffer_item($buffer_item)
 	{
-		if(isset($this->buffer_by_identifier[$buffer_item->get_result_identifier()]) && $this->buffer_by_identifier[$buffer_item->get_result_identifier()]->get_result_value() == '')
+		if(isset($this->buffer_by_identifier[$buffer_item->get_result_identifier()]) && $this->buffer_items[$this->buffer_by_identifier[$buffer_item->get_result_identifier()]]->get_result_value() == '')
 		{
 			// Overwrite the buffer item if there is a match but empty (incomplete) result
 			$this->remove($buffer_item->get_result_identifier());
@@ -68,7 +68,7 @@ class pts_test_result_buffer
 	public function add_test_result($identifier, $value, $raw_value = null, $json = null, $min_value = null, $max_value = null)
 	{
 		$buffer_item = new pts_test_result_buffer_item($identifier, $value, $raw_value, $json, $min_value, $max_value);
-		if(isset($this->buffer_by_identifier[$buffer_item->get_result_identifier()]) && $this->buffer_by_identifier[$buffer_item->get_result_identifier()]->get_result_value() == '')
+		if(isset($this->buffer_by_identifier[$buffer_item->get_result_identifier()]) && $this->buffer_items[$this->buffer_by_identifier[$buffer_item->get_result_identifier()]]->get_result_value() == '')
 		{
 			// Overwrite the buffer item if there is a match but empty (incomplete) result
 			$this->remove($buffer_item->get_result_identifier());
